Add view folder for html

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,11 @@
   <title>Gym Tracking App</title>
   <meta name="description" content="Gym exercise tracking app">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1>Hello World</h1>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/gym-tracker.js"></script>
 </body>
 </html>
