--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,26 @@
   <title>Gym Tracking App</title>
   <meta name="description" content="Gym exercise tracking app">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <header role="banner">
+    <img src="images/gym-tracker-header.jpg" alt="Man lifting barbell">
+    <h1>Gym Tracker App</h1>
+  </header>
+  <main role="main">
+    <p>What this app does and how it's used at a high level ...</p>
+    <p>Bacon ipsum dolor amet pastrami cow fatback chuck swine meatloaf. Pastrami spare ribs tri-tip, chicken t-bone hamburger corned beef sirloin shoulder turkey short loin filet mignon.</p>
+    <p> Alcatra hamburger boudin jerky biltong pork chop tongue buffalo brisket chuck frankfurter tail. Tri-tip turducken pork, kielbasa brisket strip steak capicola beef buffalo leberkas alcatra ribeye shoulder t-bone. Rump bresaola pork belly ground round. </p>
+
+    <form id="login-form">
+      <label for="emailAddress">Enter your email address to get started:</label>
+      <input type="email" id="emailAddress" name="emailAddress" placeholder="Your Email Address" required>
+      <button class="btn btn-success"><i class="fa fa-play"></i> Start Your Training Session</button>
+    </form>
+  </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/gym-tracker.js"></script>
 </body>
