--- a/views/select-training-session.html
+++ b/views/select-training-session.html
@@ -5,13 +5,13 @@
   <title>Gym Tracking App</title>
   <meta name="description" content="Gym exercise tracking app">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <header role="banner">
-    <img src="/images/gym-tracker-header.jpg" alt="Man lifting barbell">
+    <img src="images/gym-tracker-header.jpg" alt="Man lifting barbell">
     <h1>Gym Tracker App</h1>
   </header>
   <main role="main">
@@ -25,7 +25,7 @@
       <button class="btn btn-success"><i class="fa fa-play"></i> Start Your Training Session</button>
     </form>
   </main>
-  <script src="/js/jquery-3.3.1.min.js"></script>
-  <script src="/js/gym-tracker.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/gym-tracker.js"></script>
 </body>
 </html>
