--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,17 +63,21 @@ label {
 header {
   max-width: 960px;
   margin: 0 auto;
-}
-header img {
-  max-width: 100%;
-
+  height: 140px;
+  background-size: cover;
+  background-image: url(../images/gym-tracker-header.jpg);
+  background-repeat: no-repeat;
+  padding: 0;
 }
 header h1 {
-  margin: 10px 0 0;
   text-transform: uppercase;
   font-size: 1.8em;
   font-weight: normal;
   text-align: center;
+  line-height: 140px;
+  color: #ffffff;
+  text-shadow: 1px 1px 1px #000, 3px 3px 5px #000;
+  margin: 0;
 }
 
 /* main */
