--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
   <header role="banner">
-    <img src="/images/gym-tracker-header.jpg" alt="Man lifting barbell">
-    <h1>Gym Tracker App</h1>
+    <h1>Gym Tracker</h1>
   </header>
   <main role="main"></main>
   <script src="/js/jquery-3.3.1.min.js"></script>
