--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,15 +36,27 @@ label {
   width: 100%;
   color: #fff;
   border-radius: 0;
+  border: none;
 }
 .btn {
   color: #fff;
 }
-.btn.btn-success {
+.btn-big-round {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+}
+.btn-small {
+  font-size: 0.8em;
+}
+.btn.btn-green {
   background-color: #00bb00;
   border-color: #00a900;
 }
-.btn.btn-success:hover {
+.btn.btn-green:hover {
   background-color: #00a800;
 }
 .btn-blue {
@@ -59,6 +71,9 @@ label {
 .btn-orange {
   background-color: #ff9800;
 }
+.btn-grey {
+  background-color: #607d8b;
+}
 /* header */
 header {
   max-width: 960px;
@@ -71,7 +86,7 @@ header {
 }
 header h1 {
   text-transform: uppercase;
-  font-size: 1.8em;
+  font-size: 2em;
   font-weight: normal;
   text-align: center;
   line-height: 140px;
@@ -85,6 +100,10 @@ main {
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
+  position: relative;
+}
+main > section {
+  padding-top: 70px;
 }
 
 /* Start Page */
@@ -126,4 +145,53 @@ main {
 #select-training-session-form .btn-block span {
   position: absolute;
   right: 10px;
+}
+
+/* Training Session Page - general */
+.training-session-type {
+  color: #fff;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 1.2em;
+}
+.type-chest {
+  background-color: #0275d8;
+}
+.type-arms {
+  background-color: #e91e63;
+}
+.type-legs {
+  background-color: #009688;
+}
+.type-back {
+  background-color: #ff9800;
+}
+/* Training Session Page - No previous exercises */
+.no-previous-data #add-exercise-form > p {
+  text-align: center;
+  margin: 15px 0 0;
+}
+.no-previous-data #add-exercise-form button {
+  margin: 15px auto 0;
+}
+.no-previous-data #add-exercise-form .btn-big-round > i {
+  line-height: 97px;
+  font-size: 2.5em;
+  font-weight: normal;
+}
+.no-previous-data #add-exercise-form button + label {
+  font-weight: normal;
+  text-align: center;
+  display: block;
+  margin: 10px 0 0;
+}
+.no-previous-data {
+  padding: 55px 0 0;
 }
