--- a/views/index.html
+++ b/views/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <header role="banner">
     <h1>Gym Tracker</h1>
   </header>
-  <main role="main"></main>
+  <main role="main" aria-live="assertive"></main>
   <script src="/js/jquery-3.3.1.min.js"></script>
   <script src="/js/gym-tracker.js"></script>
 </body>
