Move API JS into separate file

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
   </header>
   <main role="main" aria-live="assertive"></main>
   <script src="/js/jquery-3.3.1.min.js"></script>
+  <script src="/js/gym-tracker-api.js"></script>
   <script src="/js/gym-tracker.js"></script>
 </body>
 </html>
