--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,6 @@
     <h1>Gym Tracker</h1>
   </header>
   <main role="main" aria-live="assertive"></main>
-  <script src="/js/jquery-3.3.1.min.js"></script>
-  <script src="/js/gym-tracker-api.js"></script>
-  <script src="/js/gym-tracker.js"></script>
+  <script src="/js/bundle.js"></script>
 </body>
 </html>
