Add footer and update homepage text

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,11 @@
     <h1>Gym Tracker</h1>
   </header>
   <main role="main" aria-live="assertive"></main>
+  <footer class="footer">
+    <p>Gym Tracker App by Alex Bandisch</p>
+    <p>(view on <a href="https://github.com/abandisch/gym-tracker-app" target="_blank">GitHub</a>)</p>
+    <p>Copyright &copy 2018</p>
+  </footer>
   <script src="/js/bundle.js"></script>
 </body>
 </html>
