--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,7 +108,7 @@ header h1 {
 main {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 20px 50px;
   position: relative;
 }
 main > section {
@@ -324,4 +324,20 @@ main > section {
   max-width: 310px;
   width: 100%;
   margin: 0 auto 10px;
+}
+
+/* Footer */
+footer {
+  background-color: #222;
+  color: #eee;
+  font-size: 0.8em;
+  text-align: center;
+  padding: 10px;
+}
+footer p {
+  margin: 0;
+  padding: 0 0 5px;
+}
+footer p a, footer p a:visited {
+  color: #eee;
 }
