--- a/views/index.html
+++ b/views/index.html
@@ -7,18 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/media-queries.css">
 </head>
 <body>
-  <header role="banner">
+  <div class="page-wrapper"> <!-- Used for sticky footer -->
+    <header role="banner">
     <h1>Gym Tracker</h1>
   </header>
-  <main role="main" aria-live="assertive"></main>
-  <footer class="footer">
-    <p>Gym Tracker App by Alex Bandisch</p>
-    <p>(view on <a href="https://github.com/abandisch/gym-tracker-app" target="_blank">GitHub</a>)</p>
-    <p>Copyright &copy 2018</p>
+    <main role="main" aria-live="assertive"></main>
+  </div>
+  <footer role="contentinfo">
+    <div class="footer-contents">
+      <p>Source on <a href="https://github.com/abandisch/gym-tracker-app" target="_blank">GitHub <i class="fa fa-github" aria-hidden="true"></i></a> </p>
+      <p>Gym Tracker App by Alex Bandisch</p>
+      <p><a href="mailto:alex@bandisch.com">Contact Me <i class="fa fa-envelope"></i></a></p>
+    </div>
   </footer>
   <script src="/js/bundle.js"></script>
 </body>
