--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,10 @@
 /* General Styles */
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 *, *:before, *:after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -24,11 +26,14 @@ input, .btn, .btn-block {
   padding: 5px 10px;
   line-height: 1.7em;
   font-size: 1em;
+  -webkit-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
 input:active, input:focus {
   outline: none !important;
   border: 1px solid #428ee6;;
+  -webkit-box-shadow: 0 0 3px #004d9a;;
   box-shadow: 0 0 3px #004d9a;
 }
 label {
@@ -259,7 +264,6 @@ main > section {
 .exercise-data #add-exercise-button-form button, .exercise-data #change-session-form button, .exercise-data #cancel-add-exercise-button-form button {
   width: 140px;
 }
-/*.exercise-data #exercises-form {*/
 .exercise-data .exercise-list {
   margin: 50px auto 0;
 }
@@ -273,14 +277,12 @@ main > section {
   display: block;
   margin: 0 auto 5px;
 }
-/*#exercises-form .exercise-list {*/
 .exercise-list {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
   max-width: 400px;
 }
-/*#exercises-form .exercise-list li {*/
 .exercise-list li {
   border-bottom: 1px dashed #022f5f;
   margin: 0 0 20px;
@@ -295,7 +297,6 @@ main > section {
   font-size: 1.2em;
 }
 .exercise-list .last-session-results {
-  /*background-color: #14A3E8;*/
   background-color: #263A40;
   color: #fff;
   font-size: 0.8em;
@@ -340,9 +341,18 @@ main > section {
 
 /* Add Set Form controls */
 .add-exercise-set .inline-form-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 100%;
   max-width: 776px;
@@ -357,7 +367,6 @@ main > section {
   width: 70%;
   font-size: 0.9em;
 }
-/*#exercises-form .exercise-list .add-exercise-set button {*/
 .exercise-list .add-exercise-set button {
   max-width: 310px;
   width: 100%;
