Refactor AddSetForm to ExerciseSetInputForm

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -91,7 +91,7 @@
     width: 20%;
     margin: 10px auto;
   }
-  .exercise-list li .add-exercise-set {
+  .exercise-list li .exercise-set-input {
     width: 28%;
     margin: 10px auto 0;
   }
