--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,8 +361,8 @@ main > section {
   margin: 0 auto;
 }
 
-/* Add Set Form controls */
-.add-exercise-set .inline-form-input {
+/* Exercise Set Form controls */
+.exercise-set-input .inline-form-input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -380,16 +380,16 @@ main > section {
   max-width: 776px;
   margin: 0 0 10px;
 }
-.add-exercise-set .inline-form-input > label {
+.exercise-set-input .inline-form-input > label {
   width: 25%;
   font-weight: normal;
   font-size: 0.9em;
 }
-.add-exercise-set .inline-form-input > input {
+.exercise-set-input .inline-form-input > input {
   width: 70%;
   font-size: 0.9em;
 }
-.exercise-list .add-exercise-set button {
+.exercise-list .exercise-set-input button {
   max-width: 310px;
   width: 100%;
   margin: 0 auto 10px;
