Add favicon to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gym Tracking App</title>
+  <title>Gym Tracker | Track Your Exercises</title>
   <meta name="description" content="Gym exercise tracking app">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
